<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slider_image"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome"
        android:contentDescription="@string/content" />

    <TextView
        android:id="@+id/slider_heading"
        android:layout_width="403dp"
        android:layout_height="87dp"
        android:text="@string/intro_heading1"
        android:textColor="@color/primary_color"
        android:textSize="32sp"
        app:fontFamily="@font/poppins_semi_bold"
        app:fontWeight="600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_image" />

    <TextView
        android:id="@+id/slider_desc"
        android:layout_width="349dp"
        android:layout_height="81dp"
        android:layout_marginTop="25dp"
        android:text="@string/intro_description1"
        android:textColor="@color/intro_description"
        app:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        app:fontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_heading" />
</androidx.constraintlayout.widget.ConstraintLayout>